# tobagent

./: .dockerignore  .env.example  .env.minimal  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE-ELASTIC-2.0  Makefile  README.md  README.zh-CN.md  aegra.json  docker-compose.yml  langgraph.json  pyproject.toml  skills-lock.json
.agents/skills/wechatpay-payment-integration/: SKILL.md
.github/workflows/: actionlint.yml  deploy.yml  desktop-build.yml  desktop-release.yml
assets/产品信息/: 14-0509-业务—产品信息.docx
assets/公司信息/: 13-0509-业务-公司信息.docx
assets/威思瑞/: 大模型问答素材.docx  威思瑞综合问答文档.docx
assets/曼隆蒂升/: 曼隆蒂升公司、产品信息.docx
assets/行业资讯/: 12-0509-业务-行业资讯.docx
desktop/: backend_entry.py
desktop/local_backend/: __init__.py  env_file.py  manager.py
docs/: config-import-export.md  design.md  desktop.md  form-field-binding-plan.md  langgraph-sdk-custom-agent.md  versioning.md  workspaces.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/dashboard/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/platform-admin/: page.tsx
frontend/app/register/: page.tsx
frontend/app/share/: page.tsx
frontend/components/chat/: chat-input.tsx  chat-interface.tsx  message-item.tsx  message-list.tsx
frontend/components/layout/: agent-profiles-dialog.tsx  agent-settings.tsx  auth-dialog.tsx  auth-page.tsx  auth-panel.tsx  dashboard-fallback.tsx  dashboard-mobile-sidebar.tsx  dashboard-workspace.tsx  desktop-backend-deployment-section.tsx  developer-manual-page.tsx  header.tsx  keyboard-shortcuts-dialog.tsx  management-dashboard.tsx  platform-admin-page.tsx  platform-footer.tsx  prompt-markdown-editor-inner.tsx  prompt-markdown-editor.tsx  sidebar.tsx  site-compliance-footer.tsx  trace-browser-page.tsx  user-manual-page.tsx  user-profile-dialog.tsx  user-settings-page.tsx  workspace-notifications.tsx
frontend/components/marketing/: agent-share-landing-page.tsx  official-home-page.tsx  platform-pricing.tsx
frontend/components/payments/: agent-share-checkout.tsx  wechat-pay-qr-code.tsx
frontend/components/providers/: auth-provider.tsx  image-asset-protection.tsx
frontend/components/ui/: action-button.tsx  app-shell.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  form-field.tsx  icon-action.tsx  (+19 more)
frontend/hooks/: useKeyboardShortcuts.ts
frontend/lib/: markdown.ts
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: build_desktop_backend.py  dev-worktree.sh  langgraph_sdk_external_call.py
services/speaker/: .dockerignore  Dockerfile  app.py
src/agent/: agent_builder.py  config.py  docs_graph.py  generic_agent.py
src/api/: auth.py  deps.py  fastapi_app.py  kws_model.py  kws_router.py  langsmith_routes.py  local_dev.py  schemas.py  services.py  session_auth.py  sms_verification.py  voice_proxy.py  workspace_utils.py
src/config_bundle/: __init__.py  bundle.py  registry.py  schemas.py  storage.py
src/middleware/: __init__.py  dynamic_config_middleware.py
src/prompts/: docs_agent_prompt.py
src/tools/: agent_builder_tool.py  fetch_tool.py  form_tool.py  mcp_tools.py  rag_tool.py  robot_control_tool.py  skill_tool.py  websearch_tool.py
src/utils/: aegra_local_runtime.py  assets_import.py  db.py  debug_logging.py  default_skills.py  document_loader.py  form_hooks.py  form_permissions.py  form_records.py  form_relations.py  langfuse_tracing.py  mcp.py  prompt_provenance.py  resource_categories.py  runtime_context.py  skill_validation.py  voice_audio_logger.py  voice_telemetry.py
tests/unit/: test_agent_share.py  test_asset_rag_names.py  test_auth_input_validation.py  test_auth_sms.py  test_check_links_async.py  test_config_bundles.py  test_cors.py  test_custom_function_tools.py  test_db_config.py  test_default_agent_profile.py  test_default_imported_skills_cleanup.py  test_default_skills.py  test_dynamic_config_middleware.py  test_form_hooks.py  test_form_permissions.py  test_form_relations.py  test_kws_router.py  test_langfuse_tracing.py  test_local_backend_env_file.py  test_mcp_pool_manager.py  test_model_gateway.py  test_model_list_cache.py  test_platform_admin.py  test_resource_category_links.py  test_resource_link_cleanup.py  test_robot_control_tool.py  test_robot_points.py  test_runtime_capabilities.py  test_runtime_context.py  test_site_testimonials.py  test_skill_validation.py  test_sms_hooks.py  test_trace_routes.py  test_voice_audio_logger.py  test_voice_proxy.py  test_voice_telemetry_langfuse.py  test_workspaces.py
(+100 files in other folders)
