[project]
name = "agent"
version = "0.0.1"
description = "LangChain docs agent example using LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.2",
    "langchain-core>=1.0.0a6",
    "langchain-anthropic>=0.1.23",
    "langgraph>=1.0.0a4",
    "langgraph-prebuilt>=0.7.0a2",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=4.0.0",
    "langchain-baseten>=0.2.0,<0.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "httpx[socks]>=0.27.0",
    "rapidfuzz>=3.0.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.35.0",
    "langchain-mcp-adapters>=0.2.2",
    "langfuse>=4.0.0",
    "langsmith>=0.8.3",
    "lancedb>=0.14.0",
    "langchain-community>=0.3.0",
    "pypdf>=5.0.0",
    "sqlalchemy>=2.0.49",
    "psycopg[binary]>=3.3.4",
    "docx2txt>=0.9",
    "websockets>=12.0",
    "dashscope>=1.20.0",
    "sherpa-onnx>=1.10.0",
    "sherpa-onnx-core>=1.10.0",
    "pypinyin>=0.50.0",
    "sentencepiece>=0.2.0",
    "aegra>=0.2.0",
    "greenlet>=3.0.0",
    "paramiko>=5.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.22.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
local-backend = ["pyqt6>=6.7.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
desktop-build = [
    "pyqt6>=6.7.0",
]
dev = [
    "anyio>=4.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]
local-backend = [
    "pyqt6>=6.7.0",
]
