[package]
name = "tobagent-desktop"
version = "0.1.0"
description = "TOB Agent desktop shell"
authors = ["TOB Agent"]
edition = "2021"

[lib]
name = "tobagent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-store = "2"
rfd = "0.15"
open = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
